feat(core): implement ADR-0033 Phase 1 pure math kernels and deduplicate call sites (#810)
* feat(core): implement pure math kernels and property tests for ADR-0033

Migrate and create foundational pure math and cognitive utilities in spector-core:
- WelfordAccumulator: Tier T2 immutable online variance/mean accumulator record
- EmaTracker: Tier T2 clock-injected immutable exponential moving average tracker
- SoftmaxKernel: Tier T1 pure static kernel with max-shift Log-Sum-Exp stabilization
- SdeEulerSolver: Tier T1 multi-channel Euler-Maruyama continuous SDE step solver
- ValenceMath: Tier T1 signed byte affective valence calculation and Bower congruence
- VectorOps.sigmoid: logistic activation function
- Add comprehensive JUnit 5 and jqwik property tests across all pure kernels

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

* refactor(memory): repoint call sites and deduplicate math algorithms to spector-core

Repoint upstream modules and deduplicate math and cognitive algorithms per ADR-0033:
- Fix numerical overflow in PolicyInferenceEngine using SoftmaxKernel max-shifted Boltzmann distribution
- Deduplicate Valence in spector-kernel and spector-memory to ValenceMath facade with deprecation
- Deduplicate BanditStats and RunningStats to EmaTracker facade with deprecation
- Delegate WelfordStats to WelfordAccumulator with lock-free atomic updates and isWarm checks
- Replace hardcoded count >= 20 checks with isWarm across DefaultImportanceProvider and ImportanceEstimator
- Delegate HomeostaticCore continuous Euler-Maruyama step to SdeEulerSolver
- Deduplicate scalar cosine similarity across DenseDerivedSparseProvider, SessionWriteBuffer, LateralInhibitionRelay, and EntityDirectory to CosineSimilarity.compute
- Delegate PCA dot product and normalization in VectorSpaceProjectionService to DotProduct and VectorOps
- Replace sigmoid duplicates in EdgeImportance and SurpriseDetector with VectorOps.sigmoid

Co-authored-by: Bharat Joshi <bharatjoshi@spectraya